export enum VesselVisitExecutionStatus {
    InProgress = "InProgress",
    Completed = "Completed",
}